bad/invalid_cast_type_int.example_compiler_output
ERROR
[1mbad/invalid_cast_type_int.lat:3:9: [1;31merror: [0;1msyntax error at )[m
    (int)null == null;
        [1;32m^[m
